--- a/djangohtmxuserauth/templates/base.html
+++ b/djangohtmxuserauth/templates/base.html
@@ -11,6 +11,14 @@
     
     <!-- HTMX -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+
+    <!-- HTMX CSRF Configuration -->
+    <script>
+        // Configure HTMX to include CSRF token in all requests
+        document.addEventListener('htmx:configRequest', function(evt) {
+            evt.detail.headers['X-CSRFToken'] = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+        });
+    </script>
     
     <!-- Custom CSS -->
     <style>
@@ -56,7 +64,9 @@
                     <form method="post" action="{% url 'logout' %}" class="d-inline">
                         {% csrf_token %}
                         <button type="submit" class="nav-link btn btn-link p-0 border-0 text-white">Logout</button>
-                    </form>                
+                    </form>
+                <a class="nav-link" href="{% url 'things:thing_list' %}">Things</a>
+
                 {% else %}
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
