--- a/djangohtmxuserauth/templates/base.html
+++ b/djangohtmxuserauth/templates/base.html
@@ -43,7 +43,7 @@
                         <button type="submit" class="nav-button">Logout</button>
                     </form>
                 <a class="nav-link" href="{% url 'things:thing_list' %}">Things</a>
-
+                <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
                 {% else %}
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
